--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@tinymce/tinymce-angular": "^6.0.0",
     "firebase": "^9.8.1",
     "ngx-auth-firebaseui": "^6.0.0",
     "rxjs": "~7.5.0",
